--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "name": "glitch md",
+  "name": "gss botwa",
   "version": "1.2.5",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
